[tool.poetry]
name = "shakespearerapper"
version = "0.1.0"
description = ""
authors = ["ShawnKBeck <48632060+ShawnKBeck@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.4.0"
streamlit = "^1.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
